--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "npm-script-cli",
+  "name": "@jf/nscli",
   "version": "1.0.0",
   "description": "`nscli` is a Node.js CLI tool that allows you to easily run scripts defined in your package.json file. It provides a simple interface for selecting and executing scripts from the terminal.",
   "main": "./dist/index.js",
