feat: update readme and package name (again)

--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "@jf/nscli",
+  "name": "nodescript-cli",
   "version": "1.0.0",
   "description": "`nscli` is a Node.js CLI tool that allows you to easily run scripts defined in your package.json file. It provides a simple interface for selecting and executing scripts from the terminal.",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.js",
   "bin": {
-    "nscli": "./dist/index.mjs"
+    "nscli": "dist/index.mjs"
   },
   "repository": {
-    "url": "https://github.com/jfirme-sys/nscli"
+    "url": "git+https://github.com/jfirme-sys/nscli.git"
   },
   "scripts": {
     "build": "tsup",
