--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "typescript": "^5.4.5"
   },
   "engines": {
-    "node": "<=15.0.0"
+    "node": ">=15.0.0"
   },
   "dependencies": {
     "inquirer": "^9.2.20",
